# sim-runner

./: README.md  pyproject.toml
runner/: __main__.py  _main_.py  gen.py  main_window.py  make_ui.bat  run-sim.cmd
runner/cmd/: run-orbit-viewer.cmd
runner/data/: walking_to_the_river.txt
runner/src/: main_window.py  tab_widget.py  yaml_tree.py
runner/ui/: __init__.py  runsim.ui  ui_gen.py
