[tool.poetry]
name = "sim-runner"
version = "0.0.1"
description = "LeoSim runner"
authors = ["p.ulanov"]
readme = "README.md"
packages = [{include = "runner"}]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
